--- a/sumedh project/register.html
+++ b/sumedh project/register.html
@@ -8,20 +8,23 @@
     <title>Document</title>
     <style>
         #sumedh1 {
-            /* border: 2px solid black; */
+             /* border: 5px solid black;  */
             height: 640px;
             width: 1400px;
             display: flex;
+            
         }
 
         #sam1 {
-/* 
-            border: 2px solid orange; */
-            height: 1000px;
+ 
+            /* border: 2px solid orange;  */
+            /* height: 1000px; */
+            height: 630px;
             width: 700px;
             background-image: url(https://images.bewakoof.com/web/group-19-1617704502.png);
             background-repeat: no-repeat;
             background-position: left;
+                background-color: beige;
         }
 
         #sam1>h1 {
@@ -32,9 +35,11 @@
         }
 
         #sam2 {
-            /* border: 2px solid orange; */
+             /* border: 2px solid orange;  */
             height: 630px;
             width: 700px;
+            /* background-color: beige; */
+
         }
 
         #sam2>h1 {
@@ -60,6 +65,7 @@
             height: 35px;
             width: 450px;
             text-align: center;
+            background-color:aliceblue;
         }
 
         #sam5>h2 {
@@ -96,6 +102,9 @@
             text-align: center;
             font-family: sans-serif;
             color: darkgray;
+        }
+        #sam9{
+            font-family: sans-serif;
         }
 
         #submit {
@@ -173,6 +182,7 @@
 </head>
 
 <body>
+      
 
     <div id="sumedh1">
         <div id="sam1">
@@ -187,11 +197,11 @@
             <h3>for Latest trends, exciting offers and everything Bewakoof</h3>
 
             <form id="sam3">
-                <input type="text " placeholder="enter mobile" id="mobile" >
-                <input type="email " placeholder="enter email" id="email" >
-                <input type="text " placeholder="enter OTP" id="otp" >
-                <input type="text " placeholder="enter password" id="password" >
-                <input type="submit" value="Continue" id="submit">
+                <input type="text " placeholder="Enter Mobile" id="mobile" >
+                <input type="email " placeholder="Enter Email" id="email" >
+                <!-- <input type="text " placeholder="enter OTP" id="otp" > -->
+                <input type="text " placeholder="Enter Password" id="password" >
+                <input type="submit" value="Continue.." id="submit">
             </form>
             <hr>
             <div id="sam5">
