sumedh group project

--- a/sumedh project/forgot.html
+++ b/sumedh project/forgot.html
@@ -28,6 +28,7 @@
             height: 35px;
             width: 450px;  
             text-align: center; 
+            border: none;
            
         }
         #submit{
