--- a/sumedh project/login.html
+++ b/sumedh project/login.html
@@ -29,6 +29,7 @@
             width: 450px;
             text-align: center;
             background-color:aliceblue;
+            border: none;
          }
          #submit{
             background-color: darkcyan;
