--- a/sumedh project/register.html
+++ b/sumedh project/register.html
@@ -66,6 +66,7 @@
             width: 450px;
             text-align: center;
             background-color:aliceblue;
+            border: none;
         }
 
         #sam5>h2 {
